added base styles

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,44 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
   <title>Online Store</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- font-family Montserrat -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap"
+        rel="stylesheet">
+  <link rel="stylesheet"
+        href="style.css">
 </head>
 
 <body>
+  <div class="os-container">
+    <header class="os-header">
+      <div class="os-logo">
+        <img class="img"
+             src="./assets/logo.svg"
+             alt="logo">
+        <span class="text">Online Store</span>
+      </div>
+    </header>
 
+    <nav class="os-breadcrumb">
+      <ul class="list">
+        <li class="item">
+          <a class="link"
+             href="#">link</a>
+        </li>
+
+        <li class="item">
+          <a class="link"
+             href="#">eCommerce</a>
+        </li>
+
+        <li class="item">
+          <a class="link"
+             href="#">Electronics</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </body>
 
 </html>
