--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,44 @@
         </li>
       </ul>
     </nav>
+
+    <main class="os-products">
+      <aside class="filters-panel">
+        <h3>Filters</h3>
+
+        <form>
+          <div>
+            <h3>Multi Range</h3>
+
+            <div>
+              <input id="$10"
+                     type="radio"
+                     name="multi-range">
+              <label for="$10">$10</label>
+            </div>
+            
+            <div>
+              <input id="all"
+                     type="radio"
+                     name="multi-range">
+              <label for="all">All</label>
+            </div>
+          </div>
+        </form>
+
+        <button type="button">CLEAR ALL FILTERS</button>
+      </aside>
+
+      <section>
+        <h3>7,618 results found</h3>
+
+        <form>
+          <div>
+            <input type="text" placeholder="Search">
+          </div>
+        </form>
+      </section>
+    </main>
   </div>
 </body>
 
