--- a/src/index.html
+++ b/src/index.html
@@ -31,56 +31,290 @@
       <ul class="list">
         <li class="item">
           <a class="link"
-             href="#">link</a>
+             href="#">Home</a>
+          <i class="link-icon icon-chevron-right"></i>
         </li>
 
         <li class="item">
           <a class="link"
              href="#">eCommerce</a>
+          <i class="link-icon icon-chevron-right"></i>
         </li>
 
         <li class="item">
           <a class="link"
              href="#">Electronics</a>
+          <i class="link-icon icon-chevron-right"></i>
         </li>
       </ul>
     </nav>
 
     <main class="os-products">
-      <aside class="filters-panel">
-        <h3>Filters</h3>
+      <aside class="os-filters-panel">
+        <header class="os-filters-panel-header">
+          <h3 class="os-filters-panel-title">Filters</h3>
 
-        <form>
-          <div>
-            <h3>Multi Range</h3>
+          <button class="os-btn-white toggle-filters">
+            <i class="icon-chevron-left"></i>
+          </button>
+        </header>
 
-            <div>
-              <input id="$10"
-                     type="radio"
-                     name="multi-range">
-              <label for="$10">$10</label>
+
+        <form class="os-filters-panel-content">
+          <div class="os-form-group divider">
+            <h3 class="os-form-title">Multi Range</h3>
+
+            <div class="os-filters-panel-item">
+              <div class="os-form-radio">
+                <input id="$10"
+                       type="radio"
+                       name="multi-range">
+                <label for="$10">$10</label>
+              </div>
             </div>
-            
-            <div>
-              <input id="all"
-                     type="radio"
-                     name="multi-range">
-              <label for="all">All</label>
+
+            <div class="os-filters-panel-item">
+              <div class="os-form-radio">
+                <input id="$10-$100"
+                       type="radio"
+                       name="multi-range">
+                <label for="$10-$100">$10-$100</label>
+              </div>
+            </div>
+
+            <div class="os-filters-panel-item">
+              <div class="os-form-radio">
+                <input id="all"
+                       type="radio"
+                       name="multi-range"
+                       checked>
+                <label for="all">All</label>
+              </div>
+            </div>
+          </div>
+
+          <div class="os-form-group divider">
+            <h3 class="os-form-title">Category</h3>
+
+            <div class="os-filters-panel-item">
+              <div class="os-form-checkbox">
+                <input id="cell-phones"
+                       type="checkbox">
+                <label for="cell-phones">
+                  <span>Cell Phones</span>
+                </label>
+              </div>
+
+              <span class="amount">1920</span>
+            </div>
+
+            <div class="os-filters-panel-item">
+              <div class="os-form-checkbox">
+                <input id="computers-tablets"
+                       type="checkbox">
+                <label for="computers-tablets">
+                  <span>Computers & Tablets</span>
+                </label>
+              </div>
+
+              <span class="amount">1820</span>
+            </div>
+          </div>
+
+          <div class="os-form-group">
+            <h3 class="os-form-title">Brand</h3>
+
+            <div class="os-filters-panel-item">
+              <div class="os-form-checkbox">
+                <input id="apple"
+                       type="checkbox">
+                <label for="apple">
+                  <span class="os-overflow-text-hidden">Apple</span>
+                </label>
+              </div>
+
+              <span class="amount">320</span>
+            </div>
+
+            <div class="os-filters-panel-item">
+              <div class="os-form-checkbox">
+                <input id="samsung"
+                       type="checkbox">
+                <label for="samsung">
+                  <span class="os-overflow-text-hidden">Samsung</span>
+                </label>
+              </div>
+
+              <span class="amount">220</span>
             </div>
           </div>
         </form>
 
-        <button type="button">CLEAR ALL FILTERS</button>
+        <button class="os-btn-primary clear-filters"
+                type="button">CLEAR ALL FILTERS</button>
       </aside>
 
       <section>
-        <h3>7,618 results found</h3>
+        <header class="os-products-header">
+          <h3 class="os-products-title">7,618 results found</h3>
+
+          <button class="os-btn-white wish-list">
+            <i class="icon-list"></i>
+          </button>
+        </header>
 
         <form>
-          <div>
-            <input type="text" placeholder="Search">
+          <div class="os-form-input use-icon">
+            <input id="search-input"
+                   type="text"
+                   placeholder="Search">
+            <label for="search-input"
+                   class="icon-list input-icon"></label>
           </div>
         </form>
+
+        <div class="os-products-list">
+          <div class="os-product-card">
+            <div class="os-product-img"
+                 style="background-image: url('https://mimelon.com/uploads/catalog/Product//sport_black1_(1).png');">
+            </div>
+
+            <div class="os-product-content">
+              <div class="os-product-price-wrapper">
+                <div class="os-product-rating">
+                  <span>3.4</span>
+                  <i class="icon-list"></i>
+                </div>
+
+                <div class="os-product-price">$399</div>
+              </div>
+
+              <h5 class="os-product-title">Apple Watch Series 4 GPS</h5>
+              <p class="os-product-description">Redesigned from scratch and completely revised.</p>
+            </div>
+
+            <footer class="os-product-footer">
+              <button class="os-btn-default">Wishlist</button>
+              <button class="os-btn-primary">Add To Cart</button>
+            </footer>
+          </div>
+
+          <div class="os-product-card">
+            <div class="os-product-img"
+                 style="background-image: url('https://mimelon.com/uploads/catalog/Product//1_1.png');">
+            </div>
+
+            <div class="os-product-content">
+              <div class="os-product-price-wrapper">
+                <div class="os-product-rating">
+                  <span>3.4</span>
+                  <i class="icon-list"></i>
+                </div>
+
+                <div class="os-product-price">$399</div>
+              </div>
+
+              <h5 class="os-product-title">Apple Watch Series 4 GPS</h5>
+              <p class="os-product-description">Redesigned from scratch and completely revised.</p>
+            </div>
+
+            <footer class="os-product-footer">
+              <button class="os-btn-default">Wishlist</button>
+              <button class="os-btn-primary">Add To Cart</button>
+            </footer>
+          </div>
+
+          <div class="os-product-card">
+            <div class="os-product-img"
+                 style="background-image: url('https://mimelon.com/uploads/catalog/Product//b4.jpg');">
+            </div>
+
+            <div class="os-product-content">
+              <div class="os-product-price-wrapper">
+                <div class="os-product-rating">
+                  <span>3.4</span>
+                  <i class="icon-list"></i>
+                </div>
+
+                <div class="os-product-price">$399</div>
+              </div>
+
+              <h5 class="os-product-title">Apple Watch Series 4 GPS</h5>
+              <p class="os-product-description">Redesigned from scratch and completely revised.</p>
+            </div>
+
+            <footer class="os-product-footer">
+              <button class="os-btn-default">Wishlist</button>
+              <button class="os-btn-primary">Add To Cart</button>
+            </footer>
+          </div>
+
+          <div class="os-product-card">
+            <div class="os-product-img"
+                 style="background-image: url('https://mimelon.com/uploads/catalog/Product//1588701104_1560523.png');">
+            </div>
+
+            <div class="os-product-content">
+              <div class="os-product-price-wrapper">
+                <div class="os-product-rating">
+                  <span>3.4</span>
+                  <i class="icon-list"></i>
+                </div>
+
+                <div class="os-product-price">$399</div>
+              </div>
+
+              <h5 class="os-product-title">Apple Watch Series 4 GPS</h5>
+              <p class="os-product-description">Redesigned from scratch and completely revised.</p>
+            </div>
+
+            <footer class="os-product-footer">
+              <button class="os-btn-default">Wishlist</button>
+              <button class="os-btn-primary">Add To Cart</button>
+            </footer>
+          </div>
+        </div>
+
+        <footer class="os-products-footer">
+          <nav class="os-pagination">
+            <a class="page-link previous"
+               href="#">
+              <i class="icon-chevron-left"></i>
+            </a>
+
+            <ul class="page-list">
+              <li>
+                <a class="page-link"
+                   href="#">1</a>
+              </li>
+
+              <li>
+                <a class="page-link"
+                   href="#">2</a>
+              </li>
+
+              <li>
+                <a class="page-link active"
+                   href="#">3</a>
+              </li>
+
+              <li>
+                <a class="page-link"
+                   href="#">4</a>
+              </li>
+
+              <li>
+                <a class="page-link"
+                   href="#">5</a>
+              </li>
+            </ul>
+
+            <a class="page-link next"
+               href="#">
+              <i class="icon-chevron-right"></i>
+            </a>
+          </nav>
+        </footer>
       </section>
     </main>
   </div>
