added link to the web app

--- a/src/index.html
+++ b/src/index.html
@@ -20,29 +20,29 @@
   <div class="os-container">
     <header class="os-header">
       <div class="os-logo">
-        <img class="img"
+        <img class="os-logo-img"
              src="./assets/logo.svg"
              alt="logo">
-        <span class="text">Online Store</span>
+        <span class="os-logo-text">Online Store</span>
       </div>
     </header>
 
     <nav class="os-breadcrumb">
-      <ul class="list">
-        <li class="item">
-          <a class="link"
+      <ul class="os-breadcrumb-list">
+        <li class="os-breadcrumb-item">
+          <a class="os-breadcrumb-link"
              href="#">Home</a>
           <i class="link-icon icon-chevron-right"></i>
         </li>
 
-        <li class="item">
-          <a class="link"
+        <li class="os-breadcrumb-item">
+          <a class="os-breadcrumb-link"
              href="#">eCommerce</a>
           <i class="link-icon icon-chevron-right"></i>
         </li>
 
-        <li class="item">
-          <a class="link"
+        <li class="os-breadcrumb-item">
+          <a class="os-breadcrumb-link"
              href="#">Electronics</a>
           <i class="link-icon icon-chevron-right"></i>
         </li>
